# utils/apiResponseFormatter.js
@@ -1,0 +1,10 @@
+module.exports = {
+  apiResponse(statusCode, status, payload, error) {
+    return {
+      statusCode,
+      status,
+      payload,
+      error,
+    };
+  },
+};
